--- a/moses-portfolio/moses-porfolio.html
+++ b/moses-portfolio/moses-porfolio.html
@@ -31,16 +31,13 @@
       </li>
       <li>
         <a href="https://know-how-global.org/projektpartnern"
-          >Project Partners</a
-        >
+          >Project Partners</a>
       </li>
       <li><a href="https://know-how-global.org/ueber-uns">About Us</a></li>
       <li><a href="https://know-how-global.org/mitmachen">Join Us</a></li>
       <li><a href="https://know-how-global.org/projekte">Local Projects</a></li>
       <li>
-        <a href="https://know-how-global.org/ausland-projekte"
-          >Projects Abroad</a
-        >
+        <a href="https://know-how-global.org/ausland-projekte">Projects Abroad</a>
       </li>
       <li><a href="https://know-how-global.org/kontakt">Contact</a></li>
     </ul>
