--- a/moses-portfolio/moses-porfolio.html
+++ b/moses-portfolio/moses-porfolio.html
@@ -22,7 +22,6 @@
   </head>
   <body>
     <h1 class="title-headline">MOSES AKUNO PORTFOLIO PAGE</h1>
-
     <!-- NAVIGATION 1: -->
     <ul class="main-nav">
       <li><a href="https://know-how-global.org/verein">Association</a></li>
@@ -30,8 +29,7 @@
         <a href="https://know-how-global.org/vorstand">Board of Directors</a>
       </li>
       <li>
-        <a href="https://know-how-global.org/projektpartnern"
-          >Project Partners</a>
+        <a href="https://know-how-global.org/projektpartnern">Project Partners</a>
       </li>
       <li><a href="https://know-how-global.org/ueber-uns">About Us</a></li>
       <li><a href="https://know-how-global.org/mitmachen">Join Us</a></li>
@@ -49,10 +47,8 @@
         <a href="https://know-how-global.org/" target="_blank" class="title-4">Take a Tour</a>
       </div>
     </header>
-
     <main class="main-projects">
       <h2 class="under-title">Projects</h2>
-
       <div class="project-container">
         <div class="card-wrapper">
           <div class="card-top1"></div>
@@ -66,7 +62,6 @@
             <a href="https://know-how-global.org/ausland-projekte">Partners</a>
           </div>
         </div>
-
         <div class="card-wrapper">
           <div class="card-top2"></div>
           <div class="card-bottom">
@@ -79,7 +74,6 @@
             <a href="https://know-how-global.org/ausland-projekte">Partners</a>
           </div>
         </div>
-
         <div class="card-wrapper">
           <div class="card-top3"></div>
           <div class="card-bottom">
@@ -92,7 +86,6 @@
             <a href="https://know-how-global.org/ausland-projekte">Partners</a>
           </div>
         </div>
-
         <div class="card-wrapper">
           <div class="card-top4"></div>
           <div class="card-bottom">
@@ -105,7 +98,6 @@
             <a href="https://know-how-global.org/ausland-projekte">Partners</a>
           </div>
         </div>
-
         <div class="card-wrapper">
           <div class="card-top5"></div>
           <div class="card-bottom">
@@ -120,9 +112,7 @@
         </div>
       </div>
     </main>
-
     <!-- ABOUT -->
-
     <div class="main-about">
       <h2>About KNOW-HOW-GLOBAL.ORG</h2>
       <div class="about-container">
