--- a/moses-portfolio/moses-porfolio.html
+++ b/moses-portfolio/moses-porfolio.html
@@ -18,6 +18,8 @@
     <!-- IMPORT OWN CSS -->
 
     <link rel="stylesheet" href="/moses-portfolio/moses-porfolio-style.css">
+    <!-- FONTAWESOME -->
+    <script src="https://kit.fontawesome.com/e1a7abba95.js" crossorigin="anonymous"></script>
     <title>MOSES AKUNO PORTFOLIO PAGE</title>
   </head>
   <body>
@@ -132,5 +134,15 @@
         </p>
       </div>
     </div>
+    <footer>
+      <div class="footer-container">
+<div class="icons"> 
+  <a href="#"><i class="fa-brands fa-twitter"></i></a>  
+  <a href="#"><i class="fa-brands fa-square-facebook"></i></a>  
+  <a href="#"><i class="fa-brands fa-square-instagram"></i></a>  
+</div>
+<div class="copyright"><p>&copy;2023 Ochieng Akuno. All Rights Reserved.</p></div>
+      </div>
+    </footer>
   </body>
 </html>
