--- a/moses-portfolio/moses-porfolio.html
+++ b/moses-portfolio/moses-porfolio.html
@@ -20,10 +20,10 @@
     <link rel="stylesheet" href="/moses-portfolio/moses-porfolio-style.css">
     <!-- FONTAWESOME -->
     <script src="https://kit.fontawesome.com/e1a7abba95.js" crossorigin="anonymous"></script>
-    <title>MOSES AKUNO PORTFOLIO PAGE</title>
+    <title>OCHIENG AKUNO PORTFOLIO PAGE</title>
   </head>
   <body>
-    <h1 class="title-headline">MOSES AKUNO PORTFOLIO PAGE</h1>
+    <h1 class="title-headline">OCHIENG AKUNO PORTFOLIO PAGE</h1>
     <!-- NAVIGATION 1: -->
     <ul class="main-nav">
       <li><a href="https://know-how-global.org/verein">Association</a></li>
@@ -43,9 +43,9 @@
     </ul>
     <header class="main-header">
       <div class="header-container">
-        <h1 class="title-2">MOSES AKUNO PORTFOLIO PAGE</h1>
+        <h1 class="title-2">OCHIENG AKUNO PORTFOLIO PAGE</h1>
         <h2 class="title-3">Hallo! Welcome to my portfolio page.</h2>
-        <p class="intro-para">I am Moses Akuno - a Web Developer - and you are about to dive into my portfolio page.</p>
+        <p class="intro-para">I am Ochieng Akuno - a Web Developer - and you are about to dive into my portfolio page.</p>
         <a href="https://know-how-global.org/" target="_blank" class="title-4">Take a Tour</a>
       </div>
     </header>
@@ -117,6 +117,9 @@
     <!-- ABOUT -->
     <div class="main-about">
       <h2>About KNOW-HOW-GLOBAL.ORG</h2>
+      <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/SYdEBsbyjqI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
       <div class="about-container">
         <p class="about-paragraph">
           The Association Know-How Global e.V. based in Dresden-Germany was
@@ -141,7 +144,7 @@
   <a href="#"><i class="fa-brands fa-square-facebook"></i></a>  
   <a href="#"><i class="fa-brands fa-square-instagram"></i></a>  
 </div>
-<div class="copyright"><p>&copy;2023 Ochieng Akuno. All Rights Reserved.</p></div>
+<div class="copyright"><p>&copy; 2023 Ochieng Akuno. All Rights Reserved.</p></div>
       </div>
     </footer>
   </body>
