improved version 8th Feb. 2023

--- a/moses-portfolio/moses-porfolio.html
+++ b/moses-portfolio/moses-porfolio.html
@@ -13,7 +13,7 @@
       rel="stylesheet">
 
     <!-- IMPORT RESET CSS  -->
-    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="/moses-portfolio/reset.css">
 
     <!-- IMPORT OWN CSS -->
 
@@ -117,6 +117,7 @@
     <!-- ABOUT -->
     <div class="main-about">
       <h2>About KNOW-HOW-GLOBAL.ORG</h2>
+      <br>
       <div class="video-container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/SYdEBsbyjqI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
