another improved version 8th Feb. 2023

--- a/moses-portfolio/moses-porfolio.html
+++ b/moses-portfolio/moses-porfolio.html
@@ -56,10 +56,8 @@
           <div class="card-top1"></div>
           <div class="card-bottom">
             <h3>Project 1</h3>
-            <p>Description</p>
-            Our Partner KAFE cooperates under this initiative with Universities in Africa
-            and Europe: Maasai Mara, Makerere, Stellenbosch,
-            Atlaspower(Portugal) and DBFZ(Germany).
+            <p class="project-para">Description</p>
+            Our Partner KAFE cooperates under this initiative with universities in Africa and Europe: Maasai Mara, Makerere, Stellenbosch, Atlaspower(Portugal) and DBFZ (Germany).  
             <a href="https://know-how-global.org/ausland-projekte">Website</a>
             <a href="https://know-how-global.org/ausland-projekte">Partners</a>
           </div>
@@ -68,7 +66,7 @@
           <div class="card-top2"></div>
           <div class="card-bottom">
             <h3>Project 2</h3>
-            <p>Description</p>
+            <p class="project-para">Description</p>
             Parents committee of Nyasanja Primary School have decided to
             improver the learning environment for their children by consturction
             of compost toilets.
@@ -80,7 +78,7 @@
           <div class="card-top3"></div>
           <div class="card-bottom">
             <h3>Project 3</h3>
-            <p>Description</p>
+            <p class="project-para">Description</p>
             The aim of the project was to support Koredo village parents' group
             in an income-generating activity so that they are in a financial
             position to pay school fees for their children.
@@ -92,7 +90,7 @@
           <div class="card-top4"></div>
           <div class="card-bottom">
             <h3>Project 4</h3>
-            <p>Description</p>
+            <p class="project-para">Description</p>
             The aim of the project was to provide residents of Kanjira village
             with rainwater tanks and face-masks. Also, sensitization seminar on
             the prevention of Covid-19 was implemented.
@@ -104,7 +102,7 @@
           <div class="card-top5"></div>
           <div class="card-bottom">
             <h3>Project 5</h3>
-            <p>Description</p>
+            <p class="project-para" >Description</p>
             The project idea was investment in an empowerment center for the
             small-scale farmers to improve their income so that they can feed
             their families and educate their children.
