another improved version 8th Feb. 2023

--- a/moses-portfolio/moses-porfolio.html
+++ b/moses-portfolio/moses-porfolio.html
@@ -119,6 +119,12 @@
       <div class="video-container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/SYdEBsbyjqI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
+      <br>
+      <p> <strong>Direction:</strong> </p>
+      <br>
+      <div class="map-container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2508.3298060168104!2d13.679120616088323!3d51.046997779562055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4709c5604867f633%3A0x55c234c857bbb34b!2sBraunsdorfer%20Str.%2095%2C%2001159%20Dresden!5e0!3m2!1sen!2sde!4v1675866147228!5m2!1sen!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
       <div class="about-container">
         <p class="about-paragraph">
           The Association Know-How Global e.V. based in Dresden-Germany was
