--- a/moses-portfolio/moses-porfolio.html
+++ b/moses-portfolio/moses-porfolio.html
@@ -146,9 +146,9 @@
     <footer>
       <div class="footer-container">
 <div class="icons"> 
-  <a href="#"><i class="fa-brands fa-twitter"></i></a>  
-  <a href="#"><i class="fa-brands fa-square-facebook"></i></a>  
-  <a href="#"><i class="fa-brands fa-square-instagram"></i></a>  
+  <a href="#"><i class="fa-brands fa-twitter ic-1"></i></a>  
+  <a href="#"><i class="fa-brands fa-square-facebook ic-2"></i></a>  
+  <a href="#"><i class="fa-brands fa-square-instagram ic-3"></i></a>  
 </div>
 <div class="copyright"><p>&copy; 2023 Ochieng Akuno. All Rights Reserved.</p></div>
       </div>
