another version 10th Feb. 2023

--- a/moses-portfolio/moses-porfolio.html
+++ b/moses-portfolio/moses-porfolio.html
@@ -26,20 +26,20 @@
     <h1 class="title-headline">OCHIENG AKUNO PORTFOLIO PAGE</h1>
     <!-- NAVIGATION 1: -->
     <ul class="main-nav">
-      <li><a href="https://know-how-global.org/verein">Association</a></li>
+      <li><a href="https://know-how-global.org/verein" target="_blank" >Association</a></li>
       <li>
-        <a href="https://know-how-global.org/vorstand">Board of Directors</a>
+        <a href="https://know-how-global.org/vorstand" target="_blank" >Board of Directors</a>
       </li>
       <li>
-        <a href="https://know-how-global.org/projektpartnern">Project Partners</a>
+        <a href="https://know-how-global.org/projektpartnern" target="_blank">Project Partners</a>
       </li>
-      <li><a href="https://know-how-global.org/ueber-uns">About Us</a></li>
-      <li><a href="https://know-how-global.org/mitmachen">Join Us</a></li>
-      <li><a href="https://know-how-global.org/projekte">Local Projects</a></li>
+      <li><a href="https://know-how-global.org/ueber-uns" target="_blank">About Us</a></li>
+      <li><a href="https://know-how-global.org/mitmachen" target="_blank">Join Us</a></li>
+      <li><a href="https://know-how-global.org/projekte" target="_blank">Local Projects</a></li>
       <li>
-        <a href="https://know-how-global.org/ausland-projekte">Projects Abroad</a>
+        <a href="https://know-how-global.org/ausland-projekte" target="_blank">Projects Abroad</a>
       </li>
-      <li><a href="https://know-how-global.org/kontakt">Contact</a></li>
+      <li><a href="https://know-how-global.org/kontakt" target="_blank">Contact</a></li>
     </ul>
     <header class="main-header">
       <div class="header-container">
@@ -58,8 +58,8 @@
             <h3>Project 1</h3>
             <p class="project-para">Description</p>
             Our Partner KAFE cooperates under this initiative with universities in Africa and Europe: Maasai Mara, Makerere, Stellenbosch, Atlaspower(Portugal) and DBFZ (Germany).  
-            <a href="https://know-how-global.org/ausland-projekte">Website</a>
-            <a href="https://know-how-global.org/ausland-projekte">Partners</a>
+            <a href="https://know-how-global.org/ausland-projekte" target="_blank">Website</a>
+            <a href="https://know-how-global.org/ausland-projekte" target="_blank">Partners</a>
           </div>
         </div>
         <div class="card-wrapper">
@@ -70,8 +70,8 @@
             Parents committee of Nyasanja Primary School have decided to
             improver the learning environment for their children by consturction
             of compost toilets.
-            <a href="https://know-how-global.org/ausland-projekte">Website</a>
-            <a href="https://know-how-global.org/ausland-projekte">Partners</a>
+            <a href="https://know-how-global.org/ausland-projekte" target="_blank">Website</a>
+            <a href="https://know-how-global.org/ausland-projekte" target="_blank">Partners</a>
           </div>
         </div>
         <div class="card-wrapper">
@@ -82,8 +82,8 @@
             The aim of the project was to support Koredo village parents' group
             in an income-generating activity so that they are in a financial
             position to pay school fees for their children.
-            <a href="https://know-how-global.org/ausland-projekte">Website</a>
-            <a href="https://know-how-global.org/ausland-projekte">Partners</a>
+            <a href="https://know-how-global.org/ausland-projekte" target="_blank">Website</a>
+            <a href="https://know-how-global.org/ausland-projekte" target="_blank">Partners</a>
           </div>
         </div>
         <div class="card-wrapper">
@@ -94,8 +94,8 @@
             The aim of the project was to provide residents of Kanjira village
             with rainwater tanks and face-masks. Also, sensitization seminar on
             the prevention of Covid-19 was implemented.
-            <a href="https://know-how-global.org/ausland-projekte">Website</a>
-            <a href="https://know-how-global.org/ausland-projekte">Partners</a>
+            <a href="https://know-how-global.org/ausland-projekte" target="_blank">Website</a>
+            <a href="https://know-how-global.org/ausland-projekte" target="_blank">Partners</a>
           </div>
         </div>
         <div class="card-wrapper">
@@ -106,8 +106,8 @@
             The project idea was investment in an empowerment center for the
             small-scale farmers to improve their income so that they can feed
             their families and educate their children.
-            <a href="https://know-how-global.org/ausland-projekte">Website</a>
-            <a href="https://know-how-global.org/ausland-projekte">Partners</a>
+            <a href="https://know-how-global.org/ausland-projekte" target="_blank">Website</a>
+            <a href="https://know-how-global.org/ausland-projekte" target="_blank">Partners</a>
           </div>
         </div>
       </div>
